css: fix some layout problems. :warning: can potentially break existing layouts

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,18 +13,6 @@
 	clear: both;
 }
 
-/**
- * 	Main Page
- */
-
-html, body {
-	height: 100%;
-	min-height: 100%;
-}
-
-#ci-visualizer {
-    position: relative;
-}
 
 #viewport {
 	width: 100%;
